# Youtube-Video-Downloader

./: README.md  pyproject.toml  requirements.txt  setup.cfg
src/youtube_downloader/: __init__.py  __main__.py  downloader.py  main.py  utils.py
tests/: test_utils.py
