[project]
name = "youtube-video-downloader"
version = "1.0.0"
description = "A clean Tkinter + pytube YouTube video downloader (GUI) with src/ layout."
authors = [{ name = "Mobin Yousefi", email = "contact@example.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pytube>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/mobinyousefi-cs/youtube-video-downloader"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = []
src = ["src"]

[tool.ruff.isort]
known-first-party = ["youtube_downloader"]
src_paths = ["src", "tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["youtube_downloader*"]
